--- a/changelog.txt
+++ b/changelog.txt
@@ -6,10 +6,10 @@
 12S2203|12S20111|2020/2021|even|None
 
 
-course-add#12S2203#Object-oriented Programming#3#
-course-add#10S1002#Pemrograman Prosedural#2#
-student-add#12S20999#Wiro Sableng#2020#Information System
-enrollment-add#12S2203#12S20999#2021/2022#
-evenstudent-add#12S20111#Jaka Sembung#2019#Information System
+course-add#12S2203#Object-oriented Programming#3#C
+course-add#10S1002#Pemrograman Prosedural#2#D
+student-add#12S20999#Wiro Sableng#2020#Information Systems
+enrollment-add#12S2203#12S20999#2021/2022#even
+student-add#12S20111#Jaka Sembung#2019#Information Systems
 enrollment-add#12S2203#12S20111#2020/2021#even
 ---
